# corestack-bootstrap-kit

./: .gitignore  AUDIT_EVENT_MODEL.md  CHANGELOG.md  CODEOWNERS  CORESTACK_FEATURES.md  CORESTACK_REQUIREMENTS_SPEC.md  GITHUB_ISSUE_CLOSEOUT_RUNBOOK.md  GITHUB_ISSUE_UPDATE_RUNBOOK.md  IMPLEMENTATION_ISSUE_BREAKDOWN_SECURITY_OSINT_MODULE_1.md  IMPLEMENTATION_STATUS.md  ISSUES_ORDER.md  LICENSE  Makefile  README.md  REFERENCE_ARCHITECTURE_SECURITY_OSINT_MODULE_1.md  SECURITY.md  SECURITY_OSINT_MODULE_1.md  UX_INFORMATION_ARCHITECTURE_CORESTACK_DESKTOP.md  corestack
config/: global.defaults.yaml
db/: README.md
packs/fear-signal-radar/: .gitignore  CHANGELOG.md  Makefile  README.md  RUNBOOK.md  SECURITY.md  pyproject.toml
packs/fear-signal-radar/fsra/loader/: __init__.py  source_data_loader.py  topic_config_loader.py
packs/fear-signal-radar/issues/: FSRA-003_ingest-api-write-only-auth-sanitization-dedupe.md  FSRA-004_egress-proxy-allowlist-enforcement-collector-only-outbound.md  FSRA-009_end-to-end-runner-scripts-minimal-admin-queries.md  FSRA-010_pack-readme-ops-runbook-security-model.md
packs/fear-signal-radar/migrations/: 0001_init.sql
packs/fear-signal-radar/schemas/: topic_config.schema.json
packs/fear-signal-radar/scripts/: admin_queries.sql  export_report.sh  fsra_doctor.sh  fsra_test.sh  run_topic.sh
packs/fear-signal-radar/tests/: conftest.py  test_db_permissions.py  test_ingest_api_auth.py  test_ingest_api_dedupe_db.py  test_rss_collector.py  test_runner_scripts.py  test_synthesizer_agent.py  test_topic_config_schema.py  test_youtube_collector.py
(+169 files in other folders)
